공지사항,FAQ 디자인 수정

--- a/views/faq.html
+++ b/views/faq.html
@@ -12,8 +12,15 @@
     <title>PangPang</title>
     <style>
       .max-width-1200 {
-      max-width: 1200px;
+      max-width: 1000px;
       margin: 0 auto; /* Center the container */
+      border: 3px solid #006f3e;
+      border-radius: 5px;
+      padding: 20px;
+    }
+    
+    button{
+      font-weight: bold;
     }
     </style>
     <script>      
