--- a/views/write_match.html
+++ b/views/write_match.html
@@ -11,6 +11,7 @@
     .btn-outline-success {
       color: #006f3e;
       border-color: #006f3e;
+      border-radius: 60px 60px/60px 60px;
     }
   
     /* 클릭 시 글자 색상 */
