--- a/views/my_community.html
+++ b/views/my_community.html
@@ -44,7 +44,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <i class="bi bi-house-fill"> > 마이페이지 > 내 커뮤닡니글 보기</i>
+            <i class="bi bi-house-fill"> > 마이페이지 > 내 커뮤니티글 보기</i>
           </div> 
         </div>
       </div>
