--- a/views/soccer.html
+++ b/views/soccer.html
@@ -12,10 +12,10 @@
     <title>PangPang</title>
     <style>
       table {
-        margin-left: 200px;
-          width: 1200px;
-          border-collapse: collapse;
-          margin-top: 20px;
+        margin: 0 auto;
+        width: 1000px;
+        border-collapse: collapse;
+        margin-top: 20px;
       }
 
       th, td {
@@ -79,7 +79,7 @@
 
         <!--축구 경기일정 및 결과-->
         <h3 style="text-align: center; font-weight: bold; padding: 50px;">⚽ 축구 경기일정 및 결과</h3>
-        <a href="https://kusf.or.kr/league/league_schedule.html?e_code=45&ptype=&l_year=2023&l_mon=&l_code=&t_code=" class="btn btn-success" style="margin-left: 1200px;">자세한 정보 보러가기 ▶</a>
+        <a href="https://kusf.or.kr/league/league_schedule.html?e_code=45&ptype=&l_year=2023&l_mon=&l_code=&t_code=" class="btn" style="margin-left: 1020px; background-color: #006f3e; color:white;">자세한 정보 보러가기 ▶</a>
         <table>
           <thead>
               <tr>
@@ -224,6 +224,11 @@
     
           </tbody>
       </table>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
