--- a/views/stadium_all.html
+++ b/views/stadium_all.html
@@ -165,15 +165,15 @@
       <br>
       <br>
       <div class="category">
-        <a href="/stadium" class="btn-custom">축구장</a>
-        <a href="/stadium/baseball" class="btn-custom">야구장</a>
-        <a href="/stadium/tennis" class="btn-custom">테니스장</a>
-        <a href="/stadium/futsal" class="btn-custom">풋살장</a>
-        <a href="/stadium/foot" class="btn-custom">족구장</a>
-        <a href="/stadium/all" class="btn-on">다목적구장</a>
+        <a href="/stadium" class="btn-custom">⚽ 축구장</a>
+        <a href="/stadium/baseball" class="btn-custom">⚾야구장</a>
+        <a href="/stadium/tennis" class="btn-custom">🎾테니스장</a>
+        <a href="/stadium/futsal" class="btn-custom">⚽풋살장</a>
+        <a href="/stadium/foot" class="btn-custom">🦶🏻족구장</a>
+        <a href="/stadium/all" class="btn-on">⛹🏻‍♂️다목적구장</a>
       </div>
       <br>
-      <h3 class="text-center mt-5 fw-bold ">다목적구장</h3>
+      <h3 class="text-center mt-5 fw-bold ">⛹🏻‍♂️ 다목적구장</h3>
       <br>
       <!--경기장 정보-->
       <div class="sport_content">
