--- a/views/contest.html
+++ b/views/contest.html
@@ -51,8 +51,8 @@
             <a href="/info" class="underline-on" style="font-size: 1.5em;">교내대회</a>
           </li>
           <br>
-          <li><a href="/info/soccer">축구팀</a></li>
-          <li><a href="/info/hockey">하키팀</a></li>
+          <li><a href="/info/soccer">축구</a></li>
+          <li><a href="/info/hockey">하키</a></li>
           <li><a href="/info/yeonchon">연촌체전</a></li>
         </ul>
       </div>
