--- a/views/soccer.html
+++ b/views/soccer.html
@@ -95,7 +95,7 @@
             <!-- 데이터 추가 -->
             <tr>
                 <td>KUSF 대학축구 U리그1 3권역</td>
-                <td>03.24(금)/td>
+                <td>03.24(금)</td>
                 <td>14:30 에코랜드축구장(별내면)</td>
                 <td>광운대</td>
                 <td>3 : 0</td>
@@ -208,7 +208,7 @@
             <tr>
               <td>KUSF 대학축구 U리그1 3권역</td>
               <td>10.31(화)</td>
-              <td>10:30 옐로우시티스타디움보조구장(장성군)/td>
+              <td>10:30 옐로우시티스타디움보조구장(장성군)</td>
               <td>조선대</td>
               <td>7 : 4</td>
               <td>광운대</td>
