매치수정 오류 완료

--- a/views/write_match.html
+++ b/views/write_match.html
@@ -101,7 +101,7 @@
         <input type="text" id="sport" name="sport" placeholder="종목" required>
         <input type="text" id="location" name="location" placeholder="장소" required>
         <input type="datetime-local" id="time" placeholder="시간" required>
-        <input type="number" id="fee" placeholder="참가비" required>   
+        <input type="number" id="fee" placeholder="참가비(숫자만 입력하세요)" required>   
         <input type="number" id="people" placeholder="모집 인원" required>
 
         <input type="radio" class="btn-check" name="options-outlined" id="male" value="male" autocomplete="off">
