--- a/views/edit_match.html
+++ b/views/edit_match.html
@@ -4,40 +4,40 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"/>
-  <link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
-  <title>PangPang</title>
-  <script>      
-    fetch('/navbar')
-          .then(response => response.text())
-          .then(data => {
-              document.getElementById("content").innerHTML = data;
-              // navbar.html이 로딩된 후에 버튼 상태를 확인하고 로그인/로그아웃 버튼을 제어하는 스크립트를 추가합니다.
-              const token = sessionStorage.getItem('토큰');
-              if (token) {
-                  document.getElementById("logoutButton").style.display = "block";
-              } else {
-                  document.getElementById("logoutButton").style.display = "none";
-              }
-          })
-          .catch(error => console.error('Error:', error));
-  </script>
-</head>
-<body>
-  <!-- 네비게이션바 -->
-  <div id='content'></div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"/>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
+    <title>PangPang</title>
+    <script>      
+      fetch('/navbar')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById("content").innerHTML = data;
+            // navbar.html이 로딩된 후에 버튼 상태를 확인하고 로그인/로그아웃 버튼을 제어하는 스크립트를 추가합니다.
+            const token = sessionStorage.getItem('토큰');
+            if (token) {
+                document.getElementById("logoutButton").style.display = "block";
+            } else {
+                document.getElementById("logoutButton").style.display = "none";
+            }
+        })
+        .catch(error => console.error('Error:', error));
+    </script>
+  </head>
+  <body>
+    <!-- 네비게이션바 -->
+    <div id='content'></div>
   
-  <!--빵 부스러기 (Breadcrumb)-->
-  <main class="mt-3 pt-1">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <i class="bi bi-house-fill"> / 매치 / 전체 매치</i>
-        </div> 
+    <!--빵 부스러기 (Breadcrumb)-->
+    <main class="mt-3 pt-1">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+            <i class="bi bi-house-fill"> / 매치 / 전체 매치</i>
+          </div> 
+        </div>
       </div>
-    </div>
-  </main>
+    </main>
 
     <!--사이드바 -->
     <div id="page-wrapper">
@@ -55,171 +55,172 @@
       </div>
       <hr class="my-4" style="height: 3px; background-color: #006f3e;">
 
-        <!-- 수정 폼 -->
-        <div class="container mt-3">
-            <form id="editForm">
-              <div class="row mb-3">
-                <label for="title" class="col-sm-2 col-form-label">제목</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="title" name="title" value="{{match.title}}" required />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="state" class="col-sm-2 col-form-label">모집 상태</label>
-                <div class="col-sm-10">
-                    <input class="btn-check" type="radio" name="state" id="모집중" value="모집중" required/>
-                    <label class="btn btn-outline-success" for="모집중">모집중</label>
-
-                    <input class="btn-check" type="radio" name="state" id="모집완료" value="모집완료" required />
-                    <label class="btn btn-outline-success" for="모집완료">모집완료</label>
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="writer" class="col-sm-2 col-form-label">작성자</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="writer" name="writer" value="{{match.writer}}" disabled />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="matchDate" class="col-sm-2 col-form-label">매치 날짜</label>
-                <div class="col-sm-10">
-                    <input type="datetime-local" class="form-control" id="matchDate" name="matchDate" value="{{match.matchDate}}" required />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="sport" class="col-sm-2 col-form-label">종목</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="sport" name="sport" value="{{match.sport}}" required />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="location" class="col-sm-2 col-form-label">장소</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="location" name="location" value="{{match.location}}" required />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="people" class="col-sm-2 col-form-label">모집인원</label>
-                <div class="col-sm-10">
-                  <input type="number" class="form-control" id="people" name="people" value="{{match.people}}" required />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="price" class="col-sm-2 col-form-label">참가비</label>
-                <div class="col-sm-10">
-                  <input type="number" class="form-control" id="price" name="price" value="{{match.price}}" required />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="gender" class="col-sm-2 col-form-label">성별</label>
-                <div class="col-sm-10">
-                    <input class="btn-check" type="radio" name="gender" id="male" value="male" >
-                    <label class="btn btn-outline-success" for="male">남자</label>
-
-                    <input class="btn-check" type="radio" name="gender" id="female" value="female" >
-                    <label class="btn btn-outline-success" for="female">여자</label>
-
-                    <input class="btn-check" type="radio" name="gender" id="irrelevant" value="irrelevant" >
-                    <label class="btn btn-outline-success" for="irrelevant">성별무관</label>
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="content" class="col-sm-2 col-form-label">내용</label>
-                <div class="col-sm-10">
-                  <input type="text" class="form-control" id="content" name="content" value="{{match.content}}" required />
-                </div>
-              </div>
-              <button type="submit" class="btn btn-success">저장</button>
-              <button type="button" class="btn btn-secondary" onclick="window.location.href='/match'">취소</button>
-            </form>
+    <!-- 수정 폼 -->
+    <div class="container mt-3">
+      <form id="editForm">
+        <div class="row mb-3">
+          <label for="title" class="col-sm-2 col-form-label">제목</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="title" name="title" value="{{match.title}}" required />
           </div>
+        </div>
+        <div class="row mb-3">
+          <label for="state" class="col-sm-2 col-form-label">모집 상태</label>
+          <div class="col-sm-10">
+            <input class="btn-check" type="radio" name="state" id="모집중" value="모집중" required/>
+            <label class="btn btn-outline-success" for="모집중">모집중</label>
 
-        <script>
+            <input class="btn-check" type="radio" name="state" id="모집완료" value="모집완료" required />
+            <label class="btn btn-outline-success" for="모집완료">모집완료</label>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="writer" class="col-sm-2 col-form-label">작성자</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="writer" name="writer" value="{{match.writer}}" disabled />
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="matchDate" class="col-sm-2 col-form-label">매치 날짜</label>
+          <div class="col-sm-10">
+              <input type="datetime-local" class="form-control" id="matchDate" name="matchDate" value="{{match.matchDate}}" required />
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="sport" class="col-sm-2 col-form-label">종목</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="sport" name="sport" value="{{match.sport}}" required />
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="location" class="col-sm-2 col-form-label">장소</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="location" name="location" value="{{match.location}}" required />
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="people" class="col-sm-2 col-form-label">모집인원</label>
+          <div class="col-sm-10">
+            <input type="number" class="form-control" id="people" name="people" value="{{match.people}}" required />
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="price" class="col-sm-2 col-form-label">참가비</label>
+          <div class="col-sm-10">
+            <input type="number" class="form-control" id="price" name="price" value="{{match.price}}" required />
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="gender" class="col-sm-2 col-form-label">성별</label>
+          <div class="col-sm-10">
+            <input class="btn-check" type="radio" name="gender" id="male" value="male" >
+            <label class="btn btn-outline-success" for="male">남자</label>
+
+            <input class="btn-check" type="radio" name="gender" id="female" value="female" >
+            <label class="btn btn-outline-success" for="female">여자</label>
+
+            <input class="btn-check" type="radio" name="gender" id="irrelevant" value="irrelevant" >
+            <label class="btn btn-outline-success" for="irrelevant">성별무관</label>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="description" class="col-sm-2 col-form-label">내용</label>
+          <div class="col-sm-10">
+            <textarea id="description" name="description" rows="4" required>{{match.content}}</textarea>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-success">저장</button>
+        <button type="button" class="btn btn-secondary" onclick="window.location.href='/match'">취소</button>
+      </form>
+    </div>
+
+    <script>
         
-        document.addEventListener('DOMContentLoaded', function () {
-            // DB에 저장된 성별 정보
-            const dbGender = "{{match.gender}}";
-            const dbState = "{{match.state}}";
-            
-            console.log("dbGender:", dbGender);
-            console.log("dbState:", dbState);
-
-            setGenderRadio(dbGender);
-            setStateRadio(dbState);
-
-
-            // 폼 제출 시 PUT 요청
-            editForm.addEventListener('submit', function (event) {
-                event.preventDefault();
-
-                const updatedData = {
-                    title: document.getElementById('title').value,
-                    state: document.querySelector('input[name="state"]:checked').value,
-                    writer: document.getElementById('writer').value,
-                    matchDate: new Date(document.getElementById('matchDate').value),
-                    sport: document.getElementById('sport').value,
-                    location: document.getElementById('location').value,
-                    people: document.getElementById('people').value,
-                    price: document.getElementById('price').value,
-                    gender: document.getElementById('gender').value,
-                    context: document.getElementById('content').value,
-                };
-
-                const matchId = window.location.pathname.split('/').pop();
-
-                fetch(`/match/edit/${matchId}`, {
-                    method: 'PUT',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(updatedData),
-                })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.success) {
-                        window.location.href = `/match`;
-                    } else {
-                        console.error('Failed to update match:', data.error);
-                    }
-                })
-                .catch(error => console.error('Error updating match:', error));
-            });
+      document.addEventListener('DOMContentLoaded', function () {
+        // DB에 저장된 성별 정보
+        const dbGender = "{{match.gender}}";
+        const dbState = "{{match.state}}";
         
+        console.log("dbGender:", dbGender);
+        console.log("dbState:", dbState);
+
+        setGenderRadio(dbGender);
+        setStateRadio(dbState);
+
+
+        // 폼 제출 시 PUT 요청
+        editForm.addEventListener('submit', function (event) {
+          event.preventDefault();
+
+          const updatedData = {
+            title: document.getElementById('title').value,
+            state: document.querySelector('input[name="state"]:checked').value,
+            writer: document.getElementById('writer').value,
+            matchDate: new Date(document.getElementById('matchDate').value),
+            sport: document.getElementById('sport').value,
+            location: document.getElementById('location').value,
+            people: document.getElementById('people').value,
+            price: document.getElementById('price').value,
+            gender: document.querySelector('input[name="gender"]:checked').value,
+            content: document.getElementById('description').value,
+          };
+        
+          const matchId = window.location.pathname.split('/').pop();
+
+          fetch(`/match/edit/${matchId}`, {
+            method: 'PUT',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(updatedData),
+          })
+          .then(response => { return response.json()})
+          .then(data => {
+            if (data.success) {
+                window.location.href = `/match`;
+            } else {
+                console.error('Failed to update match:', data.error);
+            }
+          })
+          .catch(error => console.error('Error updating match:', error));
+        });
+
         function setGenderRadio(dbGender) {
-            const radioButtons = document.querySelectorAll('input[name="gender"].btn-check');
+          const radioButtons = document.querySelectorAll('input[name="gender"].btn-check');
 
-            // nodeList를 배열로 변환 후 forEach 사용
-            Array.from(radioButtons).forEach(function(button) {
-                // 각 라디오 버튼의 value 값과 DB에서 받아온 state 값을 비교하여 체크 상태 설정
-                if (button.value === dbGender) {
-                    button.checked = true;
-                }
-            });
+          // nodeList를 배열로 변환 후 forEach 사용
+          Array.from(radioButtons).forEach(function(button) {
+            // 각 라디오 버튼의 value 값과 DB에서 받아온 state 값을 비교하여 체크 상태 설정
+            if (button.value === dbGender) {
+                button.checked = true;
+            }
+          });
         }
-      
 
         function setStateRadio(dbState) {
-            const radioButtons = document.querySelectorAll('input[name="state"].btn-check');
+        const radioButtons = document.querySelectorAll('input[name="state"].btn-check');
 
-            // nodeList를 배열로 변환 후 forEach 사용
-            Array.from(radioButtons).forEach(function (button) {
-                // 각 라디오 버튼의 value 값과 DB에서 받아온 state 값을 비교하여 체크 상태 설정
-                if (button.value === dbState) {
-                    button.checked = true;
-                }
-            });
-        }
-    });
-    //사이드바 높이 동적으로 조절
-    function setSidebarHeight() {
-          const sidebar = document.getElementById('sidebar-wrapper');
-          const windowHeight = window.innerHeight;
-          const newHeight = windowHeight + 120; // 현재 창 높이에 500px 추가
-          sidebar.style.height = newHeight + 'px';
-        }
+        // nodeList를 배열로 변환 후 forEach 사용
+        Array.from(radioButtons).forEach(function (button) {
+          // 각 라디오 버튼의 value 값과 DB에서 받아온 state 값을 비교하여 체크 상태 설정
+          if (button.value === dbState) {
+              button.checked = true;
+          }
+        });
+      }
+      });
 
-        window.addEventListener('DOMContentLoaded', setSidebarHeight);
-        window.addEventListener('resize', setSidebarHeight);
-        </script>
+
+      //사이드바 높이 동적으로 조절
+      function setSidebarHeight() {
+        const sidebar = document.getElementById('sidebar-wrapper');
+        const windowHeight = window.innerHeight;
+        const newHeight = windowHeight + 120; // 현재 창 높이에 500px 추가
+        sidebar.style.height = newHeight + 'px';
+      }
+
+      window.addEventListener('DOMContentLoaded', setSidebarHeight);
+      window.addEventListener('resize', setSidebarHeight);
+    </script>
   </body>
 </html>
