인기>자유 수정

--- a/views/market_board.html
+++ b/views/market_board.html
@@ -51,7 +51,7 @@
             <a href="/community" style="font-size: 1.5em;">커뮤니티</a>
           </li>
           <br>
-          <li><a href="/community/popular">인기 게시판</a></li>
+          <li><a href="/community/popular">자유 게시판</a></li>
           <li><a href="/community/daily">일일 게시판</a></li>
           <li><a href="/community/equipment">장비 게시판</a></li>
           <li><a href="/community/tip">꿀팁 게시판</a></li>
@@ -188,7 +188,7 @@
   function getCategoryInKorean(category) {
     switch(category) {
       case 'popular':
-        return '인기게시판';
+        return '자유게시판';
       case 'daily':
         return '일일게시판';
       case 'equipment':
