--- a/views/my_community.html
+++ b/views/my_community.html
@@ -202,7 +202,7 @@
       function getCategoryInKorean(category) {
       switch(category) {
         case 'popular':
-          return '인기게시판';
+          return '자유게시판';
         case 'daily':
           return '일일게시판';
         case 'equipment':
