--- a/views/popular_board.html
+++ b/views/popular_board.html
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="col-md-12">
            
-            <i class="bi bi-house-fill"> > 커뮤니티 > 인기 게시판 </i>
+            <i class="bi bi-house-fill"> > 커뮤니티 > 자유 게시판 </i>
           </div> 
         </div>
       </div>
@@ -50,7 +50,7 @@
             <a href="/community" style="font-size: 1.5em;">커뮤니티</a>
           </li>
           <br>
-          <li><a href="/community/popular" class="underline-on">인기 게시판</a></li>
+          <li><a href="/community/popular" class="underline-on">자유 게시판</a></li>
           <li><a href="/community/daily">일일 게시판</a></li>
           <li><a href="/community/equipment">장비 게시판</a></li>
           <li><a href="/community/tip">꿀팁 게시판</a></li>
@@ -62,7 +62,7 @@
     <!--게시글 리스트-->
     <div style="margin: 0 auto; width: 90%;">
       <div class="container-fluid  p-5"  >
-        <h2 class="text-center mt-5 fw-bold ">인기 게시판</h2>
+        <h2 class="text-center mt-5 fw-bold ">자유 게시판</h2>
        
           <div class="container-fluid p-5 me-5 mr-5list-container ">
             <div class="card mb-1 p-3"  style="border: 3px solid #006f3e;">
@@ -187,7 +187,7 @@
   function getCategoryInKorean(category) {
     switch(category) {
       case 'popular':
-        return '인기게시판';
+        return '자유게시판';
       case 'daily':
         return '일일게시판';
       case 'equipment':
