--- a/views/navbar.html
+++ b/views/navbar.html
@@ -25,8 +25,7 @@
                     <div class="dropdown">
                         <a class="nav-link" href="/community">커뮤니티</a>
                         <ul class="dropdown-content">
-                            <li><a class="nav-link" href="/community/popular">자유 게시판</a></li>
-                            <li><a class="nav-link" href="/community/daily">일일 게시판</a></li>
+                            <li><a class="nav-link" href="/community/daily">자유 게시판</a></li>
                             <li><a class="nav-link" href="/community/equipment">장비 게시판</a></li>
                             <li><a class="nav-link" href="/community/tip">꿀팁 게시판</a></li>
                             <li><a class="nav-link" href="/community/market">장터 게시판</a></li>
