--- a/views/write_board.html
+++ b/views/write_board.html
@@ -49,8 +49,7 @@
             <a href="/community" class="underline-on" style="font-size: 1.5em;">커뮤니티</a>
           </li>
           <br>
-          <li><a href="/community/popular">자유 게시판</a></li>
-          <li><a href="/community/daily">일일 게시판</a></li>
+          <li><a href="/community/daily">자유 게시판</a></li>
           <li><a href="/community/equipment">장비 게시판</a></li>
           <li><a href="/community/tip">꿀팁 게시판</a></li>
           <li><a href="/community/market">장터 게시판</a></li>
@@ -88,8 +87,7 @@
             <input type="text" id="title" name="title" placeholder="제목" required>
             <select id="category" id = "category" name="category" required style="height: 40px;">
               <option value="" disabled selected>카테고리 선택</option>
-              <option id = "popular" value="popular">자유게시판</option>
-              <option id = "daily" value="daily">일일게시판</option>
+              <option id = "daily" value="daily">자유게시판</option>
               <option id = "equipment" value="equipment">장비게시판</option>
               <option id = "tip" value="tip">꿀팁게시판</option>
               <option id = "market" value="market">장터게시판</option>
