--- a/views/community.html
+++ b/views/community.html
@@ -172,10 +172,8 @@
     
     function getCategoryInKorean(category) {
       switch(category) {
-        case 'popular':
-          return '인기게시판';
         case 'daily':
-          return '일일게시판';
+          return '자유게시판';
         case 'equipment':
           return '장비게시판';
         case 'tip':
