--- a/views/daily_board.html
+++ b/views/daily_board.html
@@ -36,7 +36,7 @@
         <div class="row">
           <div class="col-md-12">
            
-            <i class="bi bi-house-fill"> > 커뮤니티 > 일일 게시판 </i>
+            <i class="bi bi-house-fill"> > 커뮤니티 > 자유 게시판 </i>
           </div> 
         </div>
       </div>
@@ -51,8 +51,7 @@
             <a href="/community" style="font-size: 1.5em;">커뮤니티</a>
           </li>
           <br>
-          <li><a href="/community/popular">자유 게시판</a></li>
-          <li><a href="/community/daily" class="underline-on">일일 게시판</a></li>
+          <li><a href="/community/daily" class="underline-on">자유 게시판</a></li>
           <li><a href="/community/equipment">장비 게시판</a></li>
           <li><a href="/community/tip">꿀팁 게시판</a></li>
           <li><a href="/community/market">장터 게시판</a></li>
@@ -64,7 +63,7 @@
       <!--게시글 리스트-->
     <div style="margin: 0 auto; width: 90%;">
       <div class="container-fluid  p-5"  >
-        <h2 class="text-center mt-5 fw-bold ">일일 게시판</h2>
+        <h2 class="text-center mt-5 fw-bold ">자유 게시판</h2>
        
           <div class="container-fluid p-5 me-5 mr-5list-container ">
             <div class="card mb-1 p-3"  style="border: 3px solid #006f3e;">
@@ -188,10 +187,8 @@
   // 
   function getCategoryInKorean(category) {
     switch(category) {
-      case 'popular':
-        return '자유게시판';
       case 'daily':
-        return '일일게시판';
+        return '자유게시판';
       case 'equipment':
         return '장비게시판';
       case 'tip':
