--- a/views/edit_community.html
+++ b/views/edit_community.html
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="col-md-12">
            
-            <i class="bi bi-house-fill"> > 커뮤니티 > 인기 게시판 </i>
+            <i class="bi bi-house-fill"> > 커뮤니티 </i>
           </div> 
         </div>
       </div>
@@ -47,11 +47,10 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/community" style="font-size: 1.5em;">커뮤니티</a>
+            <a href="/community" style="font-size: 1.5em;" class="underline-on">커뮤니티</a>
           </li>
           <br>
-          <li><a href="/community/popular" class="underline-on">인기 게시판</a></li>
-          <li><a href="/community/daily">일일 게시판</a></li>
+          <li><a href="/community/daily">자유 게시판</a></li>
           <li><a href="/community/equipment">장비 게시판</a></li>
           <li><a href="/community/tip">꿀팁 게시판</a></li>
           <li><a href="/community/market">장터 게시판</a></li>
