--- a/views/promotion_board.html
+++ b/views/promotion_board.html
@@ -51,8 +51,7 @@
             <a href="/community" style="font-size: 1.5em;">커뮤니티</a>
           </li>
           <br>
-          <li><a href="/community/popular">자유 게시판</a></li>
-          <li><a href="/community/daily">일일 게시판</a></li>
+          <li><a href="/community/daily">자유 게시판</a></li>
           <li><a href="/community/equipment">장비 게시판</a></li>
           <li><a href="/community/tip">꿀팁 게시판</a></li>
           <li><a href="/community/market">장터 게시판</a></li>
@@ -188,10 +187,8 @@
   // 
   function getCategoryInKorean(category) {
     switch(category) {
-      case 'popular':
-        return '자유게시판';
       case 'daily':
-        return '일일게시판';
+        return '자유게시판';
       case 'equipment':
         return '장비게시판';
       case 'tip':
