qna 글작성 완료

--- a/views/community.html
+++ b/views/community.html
@@ -47,8 +47,7 @@
             <a href="/community" class="underline-on" style="font-size: 1.5em;">커뮤니티</a>
           </li>
           <br>
-          <li><a href="/community/popular">자유 게시판</a></li>
-          <li><a href="/community/daily">일일 게시판</a></li>
+          <li><a href="/community/daily">자유 게시판</a></li>
           <li><a href="/community/equipment">장비 게시판</a></li>
           <li><a href="/community/tip">꿀팁 게시판</a></li>
           <li><a href="/community/market">장터 게시판</a></li>
