--- a/views/faq.html
+++ b/views/faq.html
@@ -64,7 +64,7 @@
           </li>
           <br>
           <li><a href="/help/notices">공지사항</a></li>
-          <li><a href="/help/qna">QnA</a></li>
+          <li><a href="/help/qna">Q&A</a></li>
           <li><a href="/help/faq" class="underline-on">FAQ</a></li>
         </ul>
       </div>
