--- a/views/notices.html
+++ b/views/notices.html
@@ -93,7 +93,7 @@
         </li>
         <br>
         <li><a href="/help/notices" class="underline-on notice-list" data-target="noticeContent1" onclick="toggleNoticeContent('noticeContent1')">공지사항</a></li>
-        <li><a href="/help/qna" class="notice-list" data-target="noticeContent2" onclick="toggleNoticeContent('noticeContent2')">QnA</a></li>
+        <li><a href="/help/qna" class="notice-list" data-target="noticeContent2" onclick="toggleNoticeContent('noticeContent2')">Q&A</a></li>
         <li><a href="/help/faq" class="notice-list" data-target="noticeContent3" onclick="toggleNoticeContent('noticeContent3')">FAQ</a></li>
       </ul>
     </div>
@@ -143,7 +143,7 @@
               2. 다양한 스포츠 종목<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'팡팡'에서는 축구, 농구, 야구, 배드민턴, 테니스 등 다양한 스포츠 종목의 파트너를 구할 수 있으며, 학생들은 자신이 원하는 스포츠를 선택하여 파트너를 매칭할 수 있습니다.<br>
               3. 편리한 장소 예약<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'팡팡'에서는 노원구 내에 존재하는 체육시설 및 교내장소 예약 사이트와 연결되어 있어 예약하기에 매우 편리합니다.<br><br>
               저희 '팡팡' 관리자들은 보다 더 좋은 서비스를 제공하기 위해 노력하겠습니다.<br>
-              문의사항이 있을 시 QnA 게시판에 남겨주시면 친절하게 대답해드리겠습니다.<br><br>감사합니다.<br><br>팡팡 관리자 올림<br><br></td>
+              문의사항이 있을 시 Q&A 게시판에 남겨주시면 친절하게 대답해드리겠습니다.<br><br>감사합니다.<br><br>팡팡 관리자 올림<br><br></td>
           </tr>
           <!-- 추가적인 공지사항을 필요에 따라 여기에 추가하세요. -->
         </tbody>
