--- a/views/qna.html
+++ b/views/qna.html
@@ -36,7 +36,7 @@
         <div class="row">
           <div class="col-md-12">
            
-            <i class="bi bi-house-fill"> > 도움말 > QnA</i>
+            <i class="bi bi-house-fill"> > 도움말 > Q&A</i>
           </div> 
         </div>
       </div>
@@ -52,15 +52,135 @@
           </li>
           <br>
           <li><a href="/help/notices">공지사항</a></li>
-          <li><a href="/help/qna" class="underline-on">QnA</a></li>
+          <li><a href="/help/qna" class="underline-on">Q&A</a></li>
           <li><a href="/help/faq">FAQ</a></li>
         </ul>
       </div>
       <hr class="my-4" style="height: 3px; background-color: #006f3e;">
 
-    <p>qna 페이지</p>
+      <!--게시글 리스트-->
+    <div style="margin: 0 auto; width: 90%;">
+      <div class="container-fluid  p-5"  >
+        <h2 class="text-center mt-5 fw-bold ">Q&A</h2> 
+          <div class="container-fluid p-5 me-5 mr-5list-container ">
+            <div class="card mb-1 p-3"  style="border: 3px solid #006f3e;">
+              <div class="card-header">
+                <a class="btn btn-primary float-end" href="/question/write" style="background-color: #006f3e; color: white;"> 
+                  <i class="fas fa-edit"></i> 글 작성
+                </a>
+              </div>
+              <div class="card-body">
+                <table class="table table-hover table-striped">
+                  <thead>
+                    <tr>
+                      <th>번호</th>
+                      <th>제목</th>
+                      <th>작성자</th>
+                      <th>작성일</th>
+                    </tr>
+                  </thead>
+                  <tbody id="questionTableBody">
+                  <!-- 여기에 게시글 목록이 추가됨 -->
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+
+    <!-- 페이지네이션 -->
+    <div class="pagination justify-content-center mt-4" id="pagination">
+    <!-- 여기에 페이지 버튼들이 추가  -->
+    </div>
+    <br/>
+    <br/>
+    <br/>
+
+
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script>
+    const tbody = document.querySelector('tbody');
+    const paginationDiv = document.getElementById('pagination');
+
+    //페이지네이션
+    const ITEMS_PER_PAGE = 10;
+
+    function createPaginationButtons(totalPages, currentPage) {
+      paginationDiv.innerHTML = ''; // 이전 버튼 초기화
+
+      const prevButton = document.createElement('button');
+      prevButton.innerHTML = `
+        <span aria-hidden="true">&laquo;</span>
+        <span class="visually-hidden">Previous</span>
+      `;
+      prevButton.classList.add('btn', 'btn-outline-secondary', 'me-2');
+      prevButton.addEventListener('click', () => {
+        if (currentPage > 1) {
+          fetchData(currentPage - 1);
+        }
+      });
+      paginationDiv.appendChild(prevButton);
+
+      for (let i = 1; i <= totalPages; i++) {
+        const pageButton = document.createElement('button');
+        pageButton.innerText = i;
+        pageButton.classList.add('btn', 'btn-outline-secondary', 'me-2');
+        if (i === currentPage) {
+          pageButton.classList.add('btn-custom');
+        }
+        pageButton.addEventListener('click', () => {
+          fetchData(i);
+        });
+        paginationDiv.appendChild(pageButton);
+      }
+
+      const nextButton = document.createElement('button');
+      nextButton.innerHTML = `
+        <span aria-hidden="true">&raquo;</span>
+        <span class="visually-hidden">Next</span>
+      `;
+      nextButton.classList.add('btn', 'btn-outline-secondary');
+      nextButton.addEventListener('click', () => {
+        if (currentPage < totalPages) {
+          fetchData(currentPage + 1);
+        }
+      });
+      paginationDiv.appendChild(nextButton);
+    }
+
+
+    function fetchData(page) {
+      fetch(`/question/list?page=${page}`)
+        .then(response => response.json())
+        .then(data => {
+          tbody.innerHTML = ''; // 테이블 초기화
+
+          data.boards.forEach((question, index) => {
+            const row = document.createElement('tr');
+            const formattedDate = new Date(question.createdAt).toLocaleDateString();
+            row.innerHTML = `
+            <td>${index + 1}</td>
+            <td>${question.title}</td>
+            <td>${question.writer}</td>
+            <td>${formattedDate}</td>
+            `;
+            row.addEventListener('click', () => {
+              // 글 상세 페이지로 이동
+              window.location.href = `/question/read/${question._id}`;
+            });
+            tbody.appendChild(row);
+          });
+
+          createPaginationButtons(data.totalPages, data.currentPage);
+        })
+        .catch(error => console.error('Error:', error));
+    }
+
+    // 초기 데이터 로딩
+    fetchData(1);
+
       //사이드바 높이 동적으로 조절
     function setSidebarHeight() {
           const sidebar = document.getElementById('sidebar-wrapper');
