--- a/views/read_board.html
+++ b/views/read_board.html
@@ -281,10 +281,10 @@
           .then(response => response.json())
           .then(data => {
             if (data.success) {
-              alert('매치가 성공적으로 삭제되었습니다.');
+              alert('게시글이 성공적으로 삭제되었습니다.');
               window.location.href = '/community'; // 삭제 완료 후 커뮤니티 목록 페이지로 이동
             } else {
-              alert('매치 삭제에 실패하였습니다.');
+              alert('게시글 삭제에 실패하였습니다.');
             }
           })
           .catch(error => {
