--- a/views/equipment_board.html
+++ b/views/equipment_board.html
@@ -64,7 +64,7 @@
     <div style="margin: 0 auto; width: 90%;">
       <div class="container-fluid  p-5"  >
         <h2 class="text-center mt-5 fw-bold ">장비 게시판</h2>
-       
+          <h4 class="text-center mt-3 ">자신이 사용하는 스포츠 장비의 정보를 공유하고, 장비 관련 질문이 가능한 장비 게시판입니다.</h4>
           <div class="container-fluid p-5 me-5 mr-5list-container ">
             <div class="card mb-1 p-3"  style="border: 3px solid #006f3e;">
               <div class="card-header">
