--- a/views/promotion_board.html
+++ b/views/promotion_board.html
@@ -64,7 +64,7 @@
     <div style="margin: 0 auto; width: 90%;">
       <div class="container-fluid  p-5"  >
         <h2 class="text-center mt-5 fw-bold ">홍보 게시판</h2>
-       
+          <h4 class="text-center mt-3 ">스포츠 관련 동아리나 행사 정보를 다른 이용자들과 공유할 수 있는 홍보 게시판입니다.</h4>
           <div class="container-fluid p-5 me-5 mr-5list-container ">
             <div class="card mb-1 p-3"  style="border: 3px solid #006f3e;">
               <div class="card-header">
