전체매치 >> 매치 게시판

--- a/views/match.html
+++ b/views/match.html
@@ -34,7 +34,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <i class="bi bi-house-fill"> > 매치 > 전체 매치</i>
+            <i class="bi bi-house-fill"> > 매치 > 매치게시판</i>
           </div> 
         </div>
       </div>
@@ -48,7 +48,7 @@
             <a href="/match" style="font-size: 1.5em;">매치</a>
           </li>
           <br>
-          <li><a href="/match" class="underline-on">전체 매치</a></li>
+          <li><a href="/match" class="underline-on">매치게시판</a></li>
           <li><a href="/match/write">매치 게시물 작성</a></li>
           <li><a href="/info/stadium">경기장 정보</a></li>
           <li><a href="https://klas.kw.ac.kr/std/sys/optrn/e4c863dfd8c7410d92bc4abc9542bccd/BoardListStdPage.do" onclick="confirmNavigation(event)">교내장소 사용신청</a></li>
@@ -59,7 +59,8 @@
     <!--게시글 리스트-->
     <div style="margin: 0 auto; width: 90%;">
       <div class="container-fluid  p-5">
-        <h2 class="text-center mt-5 fw-bold ">매치글</h2>
+        <h3 class="text-center mt-5 fw-bold ">매치 게시판</h3>
+        <h6 class="text-center mt-3 ">스포츠 파트너를 찾기 위한 매치글을 공유하는 매치 게시판입니다.</h6>
         <div class="container-fluid p-5 me-5 mr-5list-container ">
           <div class="card mb-1 p-3"  style="border: 3px solid #006f3e;">
             <div class="card-header">
