--- a/views/navbar.html
+++ b/views/navbar.html
@@ -13,7 +13,7 @@
                     <div class="dropdown">
                         <a class="nav-link" href="/match">매치</a>
                         <ul class="dropdown-content">
-                            <li><a class="nav-link" href="/match">전체 매치</a></li>
+                            <li><a class="nav-link" href="/match">매치게시판</a></li>
                             <li><a class="nav-link" href="/match/write">매치 게시물 작성</a></li>
                             <li><a class="nav-link" href="/info/stadium">경기장 정보</a></li>
                             <li><a class="nav-link" href="https://klas.kw.ac.kr/std/sys/optrn/e4c863dfd8c7410d92bc4abc9542bccd/BoardListStdPage.do">교내장소 사용신청</a></li>
