--- a/views/read_match.html
+++ b/views/read_match.html
@@ -48,7 +48,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <i class="bi bi-house-fill"> > 매치 > 전체 매치</i>
+            <i class="bi bi-house-fill"> > 매치 > 매치게시판</i>
           </div> 
         </div>
       </div>
@@ -62,7 +62,7 @@
             <a href="/match" style="font-size: 1.5em;">매치</a>
           </li>
           <br>
-          <li><a href="/match" class="underline-on">전체 매치</a></li>
+          <li><a href="/match" class="underline-on">매치게시판</a></li>
           <li><a href="/match/write">매치 게시물 작성</a></li>
           <li><a href="/info/stadium">경기장 정보</a></li>
           <li><a href="https://klas.kw.ac.kr/std/sys/optrn/e4c863dfd8c7410d92bc4abc9542bccd/BoardListStdPage.do">교내장소 사용신청</a></li>
