--- a/views/stadium_all.html
+++ b/views/stadium_all.html
@@ -155,7 +155,7 @@
             <a href="/match" style="font-size: 1.5em;">매치</a>
           </li>
           <br>
-          <li><a href="/match">전체 매치</a></li>
+          <li><a href="/match">매치게시판</a></li>
           <li><a href="/match/write">매치 게시물 작성</a></li>
           <li><a href="/info/stadium" class="underline-on">경기장 정보</a></li>
           <li><a href="https://klas.kw.ac.kr/std/sys/optrn/e4c863dfd8c7410d92bc4abc9542bccd/BoardListStdPage.do" onclick="confirmNavigation(event)">교내장소 사용신청</a></li>
